syntax = "proto3";

package inventory;

service InventoryService {
  rpc AddProduct (AddProductRequest) returns (AddProductResponse);
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message AddProductRequest {
  string product_name = 1;
  int32 quantity = 2;
}

message AddProductResponse {
  bool success = 1;
  string message = 2;
}

message GetProductRequest {
  string product_name = 1;
  int32 quantity = 2;
}

message GetProductResponse {
  bool success = 1;
  string message = 2;
}